--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dotenv-webpack": "^1.8.0",
 		"react": "^16.13.1",
 		"react-dom": "npm:@hot-loader/react-dom",
+		"react-helmet": "^6.0.0",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"styled-components": "^5.1.0"
